syntax = "proto3";

option go_package = "./pkg/simio";

message ActionState {
  repeated double values = 1;
}